Added: Add CI to project
